# more-fs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: recursive.rs
proptest-regressions/: utils.txt
src/: error.rs  lib.rs  utils.rs
src/tests/: general.rs  mod.rs  test_dir.rs  utils.rs
test_dir/: Cargo.toml
test_dir/src/: core.rs  lib.rs  macros.rs
tests/: common.rs  custom_tempfile.rs  integration.rs  utils.rs
tests/assets/: copy_not_in_same_dir_test_file
tests/assets/a_dir/another_dir/: new_file
