[package]
name = "more-fs"
version = "0.1.1"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
description = """
More filesystem utilities for the Rust programming language
"""
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/oberblastmeister/more-fs"
repository = "https://github.com/oberblastmeister/more-fs"

[dependencies]
jwalk = "0.5.1"
rayon = "1.5.0"
thiserror = "1.0.22"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"
fs_extra = "1.2.0"
eyre = "0.6.3"
rand = "0.8.0"
