[package]
name = "new"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
walkdir = "2.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.3"
fs_extra = "1.2.0"
test_dir = { path = "test_dir" }

[workspace]
members = [
    "test_dir",
]

[lib]
name = "more_fs"

[[bench]]
name = "recursive"
harness = false
