[package]
name = "more-fs"
version = "0.2.1"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
description = "More filesystem operations"
documentation = "https://docs.rs/more-fs/"
homepage = "https://github.com/oberblastmeister/more-fs"
repository = "https://github.com/oberblastmeister/more-fs"
readme = "README.md"
keywords = ["move", "recursive", "concurrent", "copy"]
categories = ["filesystem"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = [
    "test_dir",
]

[features]
default = ["rayon"]

[dependencies]
rayon = { version = "1.5.0", optional = true }
walkdir = "2.3.1"

[dev-dependencies]
criterion = "0.3.3"
fs_extra = "1.2.0"
test_dir = { path = "test_dir" }

[[bench]]
name = "recursive"
harness = false
